--- a/home/src/app/Layout/bottom/sp-count/diem-khac-biet/diem-khac-biet.component.html
+++ b/home/src/app/Layout/bottom/sp-count/diem-khac-biet/diem-khac-biet.component.html
@@ -1,12 +1,12 @@
 <div id="diemkhacbiet">
   <div class="row">
     <div class="title">
-      <p class="title-count">12 Điểm khác biệt chọn VIETSTARMAX làm đối tác</p>
+      <p class="title-count">12 Điểm khác biệt chọn Thiên An làm đối tác</p>
     </div>
   </div>
   <div class="row">
     <div class="img2000">
-      <img class="image2000" src="https://vietstarmax.vn/images/0new/san-xuat-2000-video-clips.webp" alt="">
+      <img class="image2000" src="https://vietstarmax.vn/wp-content/uploads/2022/06/san-xuat-2000-video-clips.webp" alt="">
     </div>
   </div>
   <div class="row">
