--- a/home/src/app/Layout/bottom/sp-count/diem-khac-biet/diem-khac-biet.component.scss
+++ b/home/src/app/Layout/bottom/sp-count/diem-khac-biet/diem-khac-biet.component.scss
@@ -69,7 +69,7 @@
     }
   }
 }
-@media only screen and (max-width: 1190px) {
+@media only screen and (max-width: 1199px) {
   #diemkhacbiet {
     .img2000 {
       .image2000 {
@@ -79,6 +79,8 @@
     }
     .addons {
       flex-direction: column;
+      align-items: center;
+
     }
   }
 }
