--- a/home/src/app/Layout/bottom/sp-count/khach-hang-noi-ve-chung-toi/khach-hang-noi-ve-chung-toi.component.html
+++ b/home/src/app/Layout/bottom/sp-count/khach-hang-noi-ve-chung-toi/khach-hang-noi-ve-chung-toi.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div id="Link">
       <div class="row body-wrapper">
-          <div id="sp-breadcrumb2" class="col-lg-12 ">
+          <!-- <div id="sp-breadcrumb2" class="col-lg-12 ">
               <ol class="breadcrumb">
                   <li class="float-left">
                       <span class="divider fa fa-location" aria-hidden="true"></span>
@@ -17,7 +17,7 @@
                       <meta [content]="i + 2">
                   </li>
               </ol>
-          </div>
+          </div> -->
 
 
           <div class="content">
@@ -27,7 +27,7 @@
                   <div class="item col-4">
                       <div class="info">
                           <div class="img">
-                              <img src="https://vietstarmax.vn/images/2020/08/07/kh-duoc-vd2.jpg" alt="">
+                              <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/kh-dua-lq2.webp" alt="">
                           </div>
                           <div class="text">
                               <h2>Ông Nguyễn Đăng Bẩy</h2>
@@ -35,7 +35,7 @@
                           </div>
                       </div>
                       <div class="comment">
-                          Khi đưa đầu bài cho team sáng tạo của Vietstarmax chúng tôi rất hy vọng các bạn sẽ cho chúng
+                          Khi đưa đầu bài cho team sáng tạo của Thiên An chúng tôi rất hy vọng các bạn sẽ cho chúng
                           tôi một kịch bản sáng tạo hay để làm bất ngờ cho người xem, cuối cùng các bạn đã làm cho
                           chúng tôi vô cùng bất ngờ với sản phẩm thưc hiện
                       </div>
@@ -43,7 +43,7 @@
                   <div class="item col-4">
                       <div class="info">
                           <div class="img">
-                              <img src="https://vietstarmax.vn/images/2020/08/07/kh-biahn2.jpg" alt="">
+                              <img src="	https://vietstarmax.vn/wp-content/uploads/2022/06/kh-biahn2.webp" alt="">
                           </div>
                           <div class="text">
                               <h2>Ông Nguyễn Hồng Linh</h2>
@@ -51,14 +51,14 @@
                           </div>
                       </div>
                       <div class="comment">
-                          Chúng tôi đã hợp tác với Vietstarmax trong nhiều năm và thấy rất hài lòng về sản phẩm cuối
+                          Chúng tôi đã hợp tác với Thiên An trong nhiều năm và thấy rất hài lòng về sản phẩm cuối
                           cùng của chúng tôi
                       </div>
                   </div>
                   <div class="item col-4">
                       <div class="info">
                           <div class="img">
-                              <img src="https://vietstarmax.vn/images/2020/08/07/kh-hsb2.jpg" alt="">
+                              <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/kh-hsb2.webp" alt="">
                           </div>
                           <div class="text">
                               <h2>Chị Phạm Thị Lý</h2>
@@ -66,14 +66,14 @@
                           </div>
                       </div>
                       <div class="comment">
-                          Team thực hiện dự án cho Vietstarmax rất nhiệt tình, nhiều dự án của chúng tôi phải làm liên
+                          Team thực hiện dự án cho Thiên An rất nhiệt tình, nhiều dự án của chúng tôi phải làm liên
                           tục xuyên đêm cả tuần mà các bạn vẫn đáp ứng đúng tiến độ đặt ra
                       </div>
                   </div>
                   <div class="item col-4">
                       <div class="info">
                           <div class="img">
-                              <img src="https://vietstarmax.vn/images/2020/08/07/kh-ferroli2.jpg" alt="">
+                              <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/kh-ferroli2.webp" alt="">
                           </div>
                           <div class="text">
                               <h2>Chị Đặng Thị Hoài</h2>
@@ -88,7 +88,7 @@
                   <div class="item col-4">
                       <div class="info">
                           <div class="img">
-                              <img src="https://vietstarmax.vn/images/2020/08/07/kh-duoc-vd2.jpg" alt="">
+                              <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/kh-duoc-vd2.webp" alt="">
                           </div>
                           <div class="text">
                               <h2>Ông Nguyễn Đăng Bẩy </h2>
@@ -96,7 +96,7 @@
                           </div>
                       </div>
                       <div class="comment">
-                          Khi đưa đầu bài cho team sáng tạo của Vietstarmax chúng tôi rất hy vọng các bạn sẽ cho chúng
+                          Khi đưa đầu bài cho team sáng tạo của Thiên An chúng tôi rất hy vọng các bạn sẽ cho chúng
                           tôi một kịch bản sáng tạo hay để làm bất ngờ cho người xem, cuối cùng các bạn đã làm cho
                           chúng tôi vô cùng bất ngờ với sản phẩm thưc hiện
                       </div>
