--- a/home/src/app/Layout/bottom/sp-final/sp-final.component.html
+++ b/home/src/app/Layout/bottom/sp-final/sp-final.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="sp-copyright">
-        © 2020 VIETSTARMAX. All Rights Reserved. Designed By NOS
+        © 2020 THIEN AN . All Rights Reserved. Designed By NOS
       </div>
     </div>
   </div>
