--- a/home/src/app/Layout/bottom/sp-fixed-btm/sp-fixed-btm.component.html
+++ b/home/src/app/Layout/bottom/sp-fixed-btm/sp-fixed-btm.component.html
@@ -5,7 +5,7 @@
         <div class="slogan">
           <div class="slogan-header">
             <div class="slogan-title">CÔNG TY TRUYỀN THÔNG UY TÍN HÀNG ĐẦU</div>
-            <div class="slogan-des"><b>VIETSTARMAX </b>là Công ty Truyền thông uy tín hàng đầu trong lĩnh vực Truyền
+            <div class="slogan-des"><b class="text-emphasize">Thiên An Product </b>là Công ty Truyền thông uy tín hàng đầu trong lĩnh vực Truyền
               thông, Quảng cáo
               trên
               cả nước. Với khẩu hiệu: “Sáng tạo không ngừng”, chúng tôi đã nỗ lực nghiên cứu các ý tưởng, giải pháp và
@@ -20,32 +20,32 @@
   </div>
   <div class="sp-container-fluid">
     <div class="imgQuayPhim">
-      <img src="https://vietstarmax.vn/images/0new/quay-phim-vietstarmax2.webp" alt="">
+      <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/quay-phim-vietstarmax2.webp" alt="">
 
     </div>
     <div class="sologan">
       <div class="container">
-        <div class="sologan-wrap">
-          <div class="title">BẮT ĐẦU DỰ ÁN CỦA BẠN CÙNG CHUYÊN GIA TRUYỀN THÔNG</div>
-          <div class="des">Hơn 1000 doanh nghiệp đã và đang đồng hành cùng VIETSTARMAX xây dựng dự án truyền thông</div>
-          <div class="btn-dangkytuvan">
-            <div class="btn-dangkytuvan-wrap">
-              <div class="images">
-                <img src="https://vietstarmax.vn/images/0new/contact-ico.png" alt="">
-              </div>
-              <div class="text">
-                Đăng ký tư vấn
-              </div>
-            </div>
+     <div class="row">
+      <div class="sologan-wrap">
+        <div class="title">BẮT ĐẦU DỰ ÁN CỦA BẠN CÙNG CHUYÊN GIA TRUYỀN THÔNG</div>
+        <div class="des">Hơn 1000 doanh nghiệp đã và đang đồng hành cùng Thiên An xây dựng dự án truyền thông</div>
+        <div class="btn-dangkytuvan">
+          <div class="btn-dangkytuvan-wrap">
 
+            <div class="text">
+              Đăng ký tư vấn
+            </div>
           </div>
+
         </div>
       </div>
+     </div>
+      </div>
+    </div>
+    <div class="images">
+      <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/vietstarmax-office3.webp" alt="">
     </div>
 
-    <div class="imgQuayPhim">
-      <img src=" https://vietstarmax.vn/images/0new/vietstarmax-office3.webp" alt="">
 
-    </div>
   </div>
 </div>
