--- a/home/src/app/Layout/template/loi-ich-layout/loi-ich-layout.component.scss
+++ b/home/src/app/Layout/template/loi-ich-layout/loi-ich-layout.component.scss
@@ -20,7 +20,7 @@
             &::before {
                 position: relative;
                 content: "";
-                background: url(https://vietstarmax.vn/templates/vietstarmax/images/tick.png) no-repeat left;
+                background: url(https://vietstarmax.vn/wp-content/uploads/2022/07/checked.webp) no-repeat left;
                 display: block;
                 width: 24px;
                 height: 24px;
