--- a/home/src/app/page/index/banner/banner.component.html
+++ b/home/src/app/page/index/banner/banner.component.html
@@ -2,22 +2,21 @@
      <div class="sp-container-fluid">
           <div class="content">
                <div #nameInput class="items row" [ngStyle]="{'marginLeft.px': marginLeft}">
-                    <div class="item " [style.background-color]="'#b8292f'"
+                    <!-- <div class="item " [style.background-color]="'#b8292f'"
                          [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
                          <div class="container">
-                              <div class="banner-img">
-                                   <img  src="https://vietstarmax.vn/images/2021/12/09/vsm-numb1.webp" alt="">
-
+                              <div @runTopContentBanner class="banner-img">
+                                   <img src="https://vcdn.subiz-cdn.com/file/firbpsqorfhmdajcpbha-logovietstarmax.png" alt="">
                               </div>
                          </div>
-                    </div>
+                    </div> -->
                     <div class="item"
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-phim-tvc3.webp)'"
+                         [style.background-image]="'url(https://vietstarmax.vn/wp-content/uploads/2022/06/banner-phim-tvc3.webp)'"
                          [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
                          <div class="banner-content">
                               <div class="container">
 
-                                   <div class="banner-content-wrap">
+                                   <div @runTopContentBanner class="banner-content-wrap">
                                         <div class="title-banner">Dịch vụ sản xuất Phim quảng cáo TVC</div>
                                         <div class="des-banner">Nhà sản xuất phim quảng cáo số 1 miền Bắc ,
                                              <br>
@@ -27,7 +26,7 @@
                                         <div class="btn-dangkytuvan">
                                              <div class="btn-dangkytuvan-wrap">
                                                   <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
+                                                       <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/contact-ico.webp"
                                                             alt="">
                                                   </div>
                                                   <div class="text">
@@ -42,11 +41,11 @@
                          </div>
                     </div>
                     <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-viralvideo.webp)'"
+                         [style.background-image]="'url(https://vietstarmax.vn/wp-content/uploads/2022/06/banner-viralvideo.webp)'"
                          [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
                          <div class="banner-content">
                               <div class="container">
-                                   <div class="banner-content-wrap">
+                                   <div @runTopContentBanner class="banner-content-wrap">
                                         <div class="title-banner">Dịch vụ sản xuất Phim viral video</div>
                                         <div class="des-banner">Nhà sản xuất phim quảng cáo số 1 miền Bắc ,
                                              <br>
@@ -56,7 +55,7 @@
                                         <div class="btn-dangkytuvan">
                                              <div class="btn-dangkytuvan-wrap">
                                                   <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
+                                                       <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/contact-ico.webp"
                                                             alt="">
                                                   </div>
                                                   <div class="text">
@@ -69,7 +68,7 @@
                          </div>
                     </div>
                     <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-phim-doanh-nghiep.webp)'"
+                         [style.background-image]="'url(https://vietstarmax.vn/wp-content/uploads/2022/06/banner-phim-doanh-nghiep.webp)'"
                          [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
                          <div class="banner-content">
                               <div class="container">
@@ -83,7 +82,7 @@
                                         <div class="btn-dangkytuvan">
                                              <div class="btn-dangkytuvan-wrap">
                                                   <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
+                                                       <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/contact-ico.webp"
                                                             alt="">
                                                   </div>
                                                   <div class="text">
@@ -96,7 +95,7 @@
                          </div>
                     </div>
                     <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-truyen-thong-tt1.webp)'"
+                         [style.background-image]="'url(https://vietstarmax.vn/wp-content/uploads/2022/06/banner-marketingonline.webp)'"
                          [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
                          <div class="banner-content">
                               <div class="container">
@@ -112,7 +111,7 @@
                                         <div class="btn-dangkytuvan">
                                              <div class="btn-dangkytuvan-wrap">
                                                   <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
+                                                       <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/contact-ico.webp"
                                                             alt="">
                                                   </div>
                                                   <div class="text">
@@ -125,7 +124,7 @@
                          </div>
                     </div>
                     <div class="item "
-                         [style.background-image]="'url(https://vietstarmax.vn/images/2020/07/10/banner-marketingonline.webp)'"
+                         [style.background-image]="'url(https://vietstarmax.vn/wp-content/uploads/2022/06/banner-truyen-thong-tt1.webp)'"
                          [ngStyle]="{'width' :screenWidth? screenWidth + 'px':'1200px' }">
                          <div class="banner-content">
                               <div class="container">
@@ -142,7 +141,7 @@
                                         <div class="btn-dangkytuvan">
                                              <div class="btn-dangkytuvan-wrap">
                                                   <div class="images">
-                                                       <img src="https://vietstarmax.vn/images/0new/contact-ico.png"
+                                                       <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/contact-ico.webp"
                                                             alt="">
                                                   </div>
                                                   <div class="text">
