--- a/home/src/app/page/index/index.component.html
+++ b/home/src/app/page/index/index.component.html
@@ -2,3 +2,8 @@
 <app-danh-sach-dich-vu></app-danh-sach-dich-vu>
 <app-section-product></app-section-product>
 <app-san-pham-noi-bat  [listItem] = listItem></app-san-pham-noi-bat>
+
+<app-dang-ky></app-dang-ky>
+
+
+
