--- a/home/src/app/page/index/section-product/section-product.component.html
+++ b/home/src/app/page/index/section-product/section-product.component.html
@@ -1,17 +1,17 @@
 <div id="product">
      <div class="container">
           <div class="row">
-               <div class="col-lg-4 col-md-6 col-sm-6">
+               <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="product-content">
                          <div class="product-content-wrap">
-                              <div class="product-title">VietstarMAX - Nhà sản xuất phim quảng cáo số 1 miền Bắc</div>
-                              <div class="product-des">VietstarMAX cung cấp giải pháp tổng thể về Video quảng cáo từ
+                              <div class="product-title">Thiên An - Nhà sản xuất phim quảng cáo số 1 miền Bắc</div>
+                              <div class="product-des">Thiên An cung cấp giải pháp tổng thể về Video quảng cáo từ
                                    việc xây dựng chiến lược, ý tưởng, quay phim tiền kỳ, dựng hậu kỳ Video và cuối cùng
                                    là phát hành Video quảng cáo đạt hiệu quả tối ưu nhất cho khách hàng.</div>
                               <div class="btn-dangkytuvan">
                                    <div class="btn-dangkytuvan-wrap">
                                         <div class="images">
-                                             <img src="https://vietstarmax.vn/images/0new/contact-ico.png" alt="">
+                                             <img src="https://vietstarmax.vn/wp-content/uploads/2022/06/contact-ico.webp" alt="">
                                         </div>
                                         <div class="text">
                                              Đăng ký tư vấn
@@ -22,10 +22,10 @@
                          </div>
                     </div>
                </div>
-               <div class="col-lg-8 col-md-6 col-sm-6">
+               <div class="col-lg-8 col-md-12 col-sm-12">
 
                     <div class="product-img">
-                         <img  src="https://vietstarmax.vn/images/2020/06/22/intro-vietstarmax.jpg"
+                         <img  src="https://vietstarmax.vn/wp-content/uploads/2022/06/intro-vietstarmax.webp"
                          alt="">
                     </div>
 
