--- a/home/src/app/Layout/bottom/sp-count/khach-hang-noi-ve-chung-toi/khach-hang-noi-ve-chung-toi.component.scss
+++ b/home/src/app/Layout/bottom/sp-count/khach-hang-noi-ve-chung-toi/khach-hang-noi-ve-chung-toi.component.scss
@@ -27,6 +27,7 @@
   .content {
     overflow: hidden;
     .title {
+      padding-top: 50px;
       font-size: 32px;
       font-weight: 400;
       line-height: 38px;
