--- a/home/src/app/Layout/header/header.component.scss
+++ b/home/src/app/Layout/header/header.component.scss
@@ -10,10 +10,13 @@
   position: fixed !important;
   z-index: 99999;
   background-color: #fff;
+  box-shadow: 0 0 4px #ccc;
+
   .sp-header-wrap {
     display: flex;
     #sp-logo {
       .logo {
+        height: 90px;
         .logo-image {
           width: 80%;
           padding: 5px;
@@ -35,6 +38,7 @@
 
           .sp-menu-li {
             display: flex;
+            position: relative;
             .sp-menu-li-wrap {
               display: flex;
               align-items: center;
@@ -88,6 +92,8 @@
                   .sp-dropdown-li-wrap {
                     display: flex;
                     position: relative;
+                    align-items: center;
+
                     .sp-dropdown-li-text {
                       padding: 0;
                       line-height: 100%;
@@ -126,7 +132,7 @@
     }
     #sp-search {
       .sp-search-wrap {
-        height: 100%;
+        height: 90px;
         display: flex;
         align-items: center;
 
@@ -191,15 +197,14 @@
   }
 
   #btn-menu-mobile-show {
-    display: none;    width: 32px;
+    display: none;
+    width: 32px;
     height: 32px;
   }
 
-
-  #btn-menu-mobile-close{
-
+  #btn-menu-mobile-close {
     display: none;
-}
+  }
 }
 
 .tran {
@@ -207,9 +212,9 @@
   transition: height 0.35s ease;
 }
 
-@media only screen and (max-width: 1190px) {
+@media only screen and (max-width: 1199px) {
   .overlay {
-    display: none;
+    // display: none;
     &::after {
       content: "";
       background-color: #000;
@@ -222,22 +227,22 @@
   }
   #sp-header {
     position: relative;
-
     .sp-header-wrap {
       display: flex;
       width: 100%;
       justify-content: space-between;
       height: 90px;
-
       #sp-logo {
         .logo {
           .logo-image {
             max-width: 176px;
+            height: 100%;
+            object-fit: cover;
           }
         }
       }
       #sp-menu {
-        display: none ;
+        display: none;
         // display: none !important;
         position: absolute;
         right: 0;
@@ -249,7 +254,9 @@
           background-color: #222;
           height: 100vh;
           z-index: 99;
-
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
 
           .sp-menu-ul {
             align-items: flex-start;
@@ -373,7 +380,7 @@
         }
       }
 
-      #btn-menu-mobile-close{
+      #btn-menu-mobile-close {
         display: block;
         color: #fff;
         float: right;
