--- a/home/src/app/Layout/template/san-pham-noi-bat/san-pham-noi-bat.component.html
+++ b/home/src/app/Layout/template/san-pham-noi-bat/san-pham-noi-bat.component.html
@@ -1,35 +1,42 @@
 <div id="SAN-PHAM-THUC-HIEN">
-     <div class="content san-pham">
-         <div class="row body-wrapper">
-             <div class="tvc-san-pham col-12">
-                 <div class="title">Sản phẩm nổi bật</div>
-             </div>
+    <div class="content san-pham">
+        <div class="row body-wrapper">
+            <div class="row">
+                <div class="tvc-san-pham col-12">
+                    <div class="title">Sản phẩm nổi bật</div>
+                </div>
+            </div>
 
-             <div class="col-12">
-                 <div class="nav-san-pham">
-                     <ul class="sppb-nav-tabs">
-                         <li *ngFor="let item of listItem" [ngClass]="item.active?'active':''">
-                             <a href="" (click)="changeList($event, item.id)"> {{item.text}}</a>
-                         </li>
-                     </ul>
-                 </div>
-             </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="nav-san-pham">
+                        <ul class="sppb-nav-tabs">
+                            <li *ngFor="let item of listItem" [ngClass]="item.active?'active':''">
+                                <a href="" (click)="changeList($event, item.id)"> {{item.text}}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 item-san-pham" *ngFor="let item of list">
+                    <div class="item">
+                        <a [href]="item.link" class="a-img">
+                            <img [src]="item.urlImg" alt="">
+                        </a>
+                        <a [href]="item.link" class="a-text">
+                            {{item.text}}
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
 
-             <div class="col-12 col-sm-4 item-san-pham" *ngFor="let item of list">
-                 <div class="item">
-                     <a [href]="item.link" class="a-img">
-                         <img [src]="item.urlImg" alt="">
-                     </a>
-                     <a [href]="item.link" class="a-text">
-                         {{item.text}}
-                     </a>
-                 </div>
-             </div>
+                <div class="col-12">
+                    <a class="xem-them" title="TVC quảng cáo" href="/vi/san-pham-tvc/">Xem thêm</a>
+                </div>
+            </div>
 
-             <div class="col-12">
-                 <a class="xem-them" title="TVC quảng cáo" href="/vi/san-pham-tvc/">Xem thêm</a>
-             </div>
-
-         </div>
-     </div>
- </div>
+        </div>
+    </div>
+</div>
