--- a/home/src/app/Layout/template/san-pham-noi-bat/san-pham-noi-bat.component.scss
+++ b/home/src/app/Layout/template/san-pham-noi-bat/san-pham-noi-bat.component.scss
@@ -132,6 +132,12 @@
                      width: 90%;
                      margin-right: 5%;
                      margin-left: 5%;
+                     a.a-img{
+
+                        img{
+                         object-fit: cover;
+                        }
+                    }
                  }
              }
 
