--- a/home/src/app/page/dich-vu/dich-vu.component.html
+++ b/home/src/app/page/dich-vu/dich-vu.component.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+
 <div class="container-fluid">
     <div class="row" id="DICH_VU">
         <div class="dichvu-banner">
