--- a/home/src/app/page/index/banner/banner.component.scss
+++ b/home/src/app/page/index/banner/banner.component.scss
@@ -37,7 +37,7 @@
 
         .item {
           height: 445px;
-          padding: 25px 0;
+          // padding: 25px 0;
           background-color: #f5f5f5;
           background-size: cover;
           border-bottom: 1px solid #fd7e14;
@@ -82,7 +82,7 @@
     }
   }
 }
-@media only screen and (max-width: 1190px) {
+@media only screen and (max-width: 1199px) {
   #banner {
     .sp-container-fluid {
       .content {
@@ -108,6 +108,10 @@
               position: absolute;
               top: 0;
               left: 0;
+              img{
+                width: 600px;
+
+              }
             }
             &::after {
               content: "";
@@ -121,6 +125,27 @@
               right: 0;
               left: 0;
             }
+          }
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 576px) {
+  #banner {
+    .sp-container-fluid {
+      .content {
+        .items {
+          .item {
+
+            .banner-img {
+
+              img{
+                width: 400px;
+
+              }
+            }
+
           }
         }
       }
