--- a/home/src/app/page/index/section-product/section-product.component.scss
+++ b/home/src/app/page/index/section-product/section-product.component.scss
@@ -1,49 +1,55 @@
 #product {
-     padding: 50px 0;
-     .product-content {
+  padding: 50px 0;
+  .product-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+
+    .product-content-wrap {
       display: flex;
       flex-direction: column;
-      width: 100%;
-      height: 100%;
       justify-content: center;
-       .product-content-wrap{
-        display: flex;
-        flex-direction: column;
-
-        justify-content: center;
-        .product-title {
-          font-size: 30px;
-          font-weight: 700;
-          margin-bottom: 30px;
-          width: 350px;
-
-        }
-        .product-des {
-          width: 350px;
-          font-size: 16px;
-          margin-bottom: 16px;
-
-        }
-       }
-
-
-     }
-     .product-img{
-      display: flex;
-      align-items: center;
-      height: 100%;
-
-      img{
-        width: 100%;
-
+      .product-title {
+        font-size: 30px;
+        font-weight: 700;
+        margin-bottom: 30px;
+        width: 350px;
+      }
+      .product-des {
+        width: 350px;
+        font-size: 16px;
+        margin-bottom: 16px;
       }
     }
-   }
-   @media only screen and (max-width: 1190px) {
-
-    // #product {
-    //   .product-img{
-    //     width: 100%;
-    //   }
-    // }
   }
+  .product-img {
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+@media only screen and (max-width: 1199px) {
+
+  #product {
+    .product-content {
+      margin-bottom: 10px;
+      .product-content-wrap {
+
+        .product-title {
+
+          width: auto;
+        }
+        .product-des {
+          width: auto;
+
+        }
+      }
+    }
+  }
+}
