--- a/home/src/app/page/index/template-dichvu/template-dichvu.component.scss
+++ b/home/src/app/page/index/template-dichvu/template-dichvu.component.scss
@@ -9,6 +9,7 @@
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+  text-align: center;
   img {
     width: 70px;
     height: 70px;
@@ -20,7 +21,7 @@
   .span2 {
     font-size: 16px;
   }
-&:hover{
-     background-color: #fff;
-}
+  &:hover {
+    background-color: #fff;
+  }
 }
